--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /Build
+/Build.bat
 /LICENSE
 /MANIFEST
+/MANIFEST.bak
 /META.yml
 /MYMETA.yml
 /Makefile
@@ -10,4 +12,3 @@
 /blib
 /cover_db
 /pm_to_blib
-/lib/Mjollnir/mjollnir.db
